--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ ADMIN_EMAIL=muxriddin.murodov@mail.ru
 ADMIN_PASSWORD=Muhriddin1997
 ADMIN_COOKIE_NAME=Muhriddinatc
 ADMIN_COOKIE_PASSWORD=Muhriddinatc1997
+PORT=https://muhriddin.site/
